--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.19)
-project(EDA_LAB04_QUADTREE)
+project(EDA_Quadtree)
 
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(EDA_LAB04_QUADTREE
+add_executable(EDA_Quadtree
         main.cpp
-        Node.h
+        Pgm.h
         Point.h
-        QuadTree.cpp
-        QuadTree.h Pgm.h)
+        QuadTree.h
+        QuadTreeNode.h)
